# stalcraft-cheat

./: .gitignore  CMakeLists.txt  README.md  cheat.sh
scripts/: run.sh  run_fixed.sh  steam_hide.sh
src/: aimbot.cpp  aimbot.h  auto_find_player.cpp  auto_struct_finder.cpp  dump.cpp  final_offset_finder.cpp  find_coord_offset.cpp  find_player_by_coords.cpp  find_real_coords.cpp  hiding.cpp  hiding.h  main.cpp  main_wallhack.cpp  memory.cpp  memory.h  offset_finder.cpp  offset_finder.h  overlay.cpp  overlay.h  pattern_scanner.cpp  pattern_scanner.h  simple_wh.cpp  terminal_menu.cpp  terminal_menu.h  test_coords.cpp  test_regions.cpp  test_regions2.cpp  ultimate_cheat.cpp  ultimate_finder.cpp  ultimate_finder_names.cpp  wallhack.cpp  wallhack.h  wh_auto.cpp  wh_final.cpp
